# snowapp-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
scratch/: areatest.py  functions.py  guitest.py  snowSector.py  testAreaMaps.py
src/: main.py
src/api/: main.py
src/api/models/: rectangle.py
src/logic/: rectModel.py
src/models/: rectangle.py
tests/: test_api_main.py  test_logic_rectModel.py
