[project]
name = "lumikola"
version = "0.1.0"
description = "This project will be the first version of a pathfinding snowblow project"
authors = [
    {name = "Tuomas Huusko",email = "huusko.tuomas@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
